Add services and legal pages

--- a/resources/views/service-single.html
+++ b/resources/views/service-single.html
@@ -31,7 +31,7 @@
                     <!-- Page Category List Start -->
                     <div class="page-category-list wow fadeInUp">
                         <h3>What We Offer</h3>
-                        <ul>
+                        <ul id="services">
                             <li><a href="#">Horse Riding Lessons</a></li>
                             <li><a href="#">Horse Training Services</a></li>
                             <li><a href="#">Grooming & Horse Care</a></li>
