--- a/resources/views/services.html
+++ b/resources/views/services.html
@@ -326,6 +326,20 @@
                             <!-- What We Item End -->
                         </div>
                         <!-- What We Item List End -->
+
+                        <!-- Passage de Galop CTA Start -->
+                        <div class="passage-galop-cta wow fadeInUp" data-wow-delay="0.8s">
+                            <div class="alert alert-primary d-flex align-items-center" role="alert">
+                                <div class="flex-grow-1">
+                                    <h4 class="alert-heading mb-2">
+                                        <i class="fa-solid fa-trophy me-2"></i>Passage de Galop
+                                    </h4>
+                                    <p class="mb-0">Découvrez nos programmes de préparation aux Galops® de la FFE, du niveau 1 au niveau 7.</p>
+                                </div>
+                                <a href="galop-1.html" class="btn btn-primary ms-3">En savoir plus</a>
+                            </div>
+                        </div>
+                        <!-- Passage de Galop CTA End -->
                     </div>
                     <!-- What We Do Body End -->
                 </div>
