--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -2434,6 +2434,24 @@ header.main-header .container{
 	color: var(--primary-color);
 }
 
+/* Footer Google Map */
+.footer-google-map {
+	margin-top: 30px;
+	position: relative;
+}
+
+.footer-google-map iframe {
+	height: 250px;
+	border: 0;
+	display: block;
+	filter: grayscale(20%) contrast(1.1);
+	transition: filter 0.3s ease;
+}
+
+.footer-google-map:hover iframe {
+	filter: grayscale(0%) contrast(1.2);
+}
+
 .footer-links-box{
 	display: flex;
 	flex-wrap: wrap;
